--- a/package.json
+++ b/package.json
@@ -45,7 +45,6 @@
     "@dcloudio/uni-app-plus": "^2.0.0-32320210825001",
     "@dcloudio/uni-h5": "^2.0.0-32320210825001",
     "@dcloudio/uni-helper-json": "*",
-    "@dcloudio/uni-i18n": "^2.0.0-32320210825001",
     "@dcloudio/uni-mp-360": "^2.0.0-32320210825001",
     "@dcloudio/uni-mp-alipay": "^2.0.0-32320210825001",
     "@dcloudio/uni-mp-baidu": "^2.0.0-32320210825001",
@@ -73,7 +72,9 @@
     "@babel/runtime": "~7.12.0",
     "@dcloudio/types": "*",
     "@dcloudio/uni-automator": "^2.0.0-32320210825001",
+    "@dcloudio/uni-cli-i18n": "^2.0.2-3070920230324001",
     "@dcloudio/uni-cli-shared": "^2.0.0-32320210825001",
+    "@dcloudio/uni-i18n": "^2.0.0-alpha-33020211130001",
     "@dcloudio/uni-migration": "^2.0.0-32320210825001",
     "@dcloudio/uni-template-compiler": "^2.0.0-32320210825001",
     "@dcloudio/vue-cli-plugin-hbuilderx": "^2.0.0-32320210825001",
@@ -95,7 +96,7 @@
     "pug": "^3.0.2",
     "pug-plain-loader": "^1.1.0",
     "sass-loader": "^10.0.0",
-    "typescript": "^3.0.0",
+    "typescript": "3.8.3",
     "vue-template-compiler": "^2.6.11"
   },
   "browserslist": [
