--- a/manifest.json
+++ b/manifest.json
@@ -69,5 +69,15 @@
     },
     "mp-qq" : {
         "usingComponents" : true
+    },
+    "h5" : {
+        "title" : "andry-app",
+        "router" : {
+            "mode" : "hash",
+            "base" : "/andry-app-h5"
+        },
+        "devServer" : {
+            "port" : 8080
+        }
     }
 }
