--- a/manifest.json
+++ b/manifest.json
@@ -59,7 +59,8 @@
         }
     },
     "mp-alipay" : {
-        "usingComponents" : true
+        "usingComponents" : true,
+        "appid" : "2021003199656458"
     },
     "mp-baidu" : {
         "usingComponents" : true
