--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,11 @@
             "immersed" : false
         },
         /* 5+App特有相关 */
-        "modules" : {},
+        "modules" : {
+            "OAuth" : {},
+            "Barcode" : {},
+            "Camera" : {}
+        },
         /* 模块配置 */
         "distribute" : {
             /* 应用发布信息 */
@@ -47,7 +51,15 @@
             },
             /* ios打包配置 */
             "sdkConfigs" : {
-                "ad" : {}
+                "ad" : {},
+                "oauth" : {
+                    "weixin" : {
+                        "appid" : "wxb0f423e9bbd696ce",
+                        "UniversalLinks" : ""
+                    }
+                },
+                "payment" : {},
+                "share" : {}
             },
             "icons" : {
                 "android" : {
@@ -79,6 +91,12 @@
                         "spotlight@2x" : "unpackage/res/icons/80x80.png",
                         "spotlight@3x" : "unpackage/res/icons/120x120.png"
                     }
+                }
+            },
+            "splashscreen" : {
+                "androidStyle" : "common",
+                "android" : {
+                    "hdpi" : ""
                 }
             }
         },
