--- a/project.config.json
+++ b/project.config.json
@@ -41,7 +41,7 @@
   "compileType": "miniprogram",
   "libVersion": "2.20.0",
   "appid": "wxc5df542218cf3fc8",
-  "projectname": "YidaGO",
+  "projectname": "andry-app",
   "debugOptions": {
     "hidedInDevtools": []
   },
