--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-    "name" : "YidaGO",
+    "name" : "andry-app",
     "appid" : "__UNI__6A03600",
-    "description" : "",
+    "description" : "100 million",
     "versionName" : "1.0.0",
     "versionCode" : "100",
     "transformPx" : false,
@@ -33,7 +33,6 @@
                     "<uses-permission android:name=\"android.permission.CHANGE_NETWORK_STATE\"/>",
                     "<uses-permission android:name=\"android.permission.CHANGE_WIFI_STATE\"/>",
                     "<uses-permission android:name=\"android.permission.FLASHLIGHT\"/>",
-                    "<uses-permission android:name=\"android.permission.GET_ACCOUNTS\"/>",
                     "<uses-permission android:name=\"android.permission.MODIFY_AUDIO_SETTINGS\"/>",
                     "<uses-permission android:name=\"android.permission.MOUNT_UNMOUNT_FILESYSTEMS\"/>",
                     "<uses-permission android:name=\"android.permission.READ_LOGS\"/>",
@@ -41,7 +40,6 @@
                     "<uses-permission android:name=\"android.permission.RECORD_AUDIO\"/>",
                     "<uses-permission android:name=\"android.permission.VIBRATE\"/>",
                     "<uses-permission android:name=\"android.permission.WAKE_LOCK\"/>",
-                    "<uses-permission android:name=\"android.permission.WRITE_CONTACTS\"/>",
                     "<uses-permission android:name=\"android.permission.WRITE_SETTINGS\"/>"
                 ],
                 "autoSdkPermissions" : true
@@ -97,7 +95,8 @@
                 "androidStyle" : "common",
                 "android" : {
                     "hdpi" : ""
-                }
+                },
+                "useOriginalMsgbox" : true
             }
         },
         /* SDK配置 */
@@ -110,7 +109,8 @@
         "usingComponents" : true,
         "appid" : "wxb0f423e9bbd696ce",
         "setting" : {
-            "urlCheck" : true
+            "urlCheck" : true,
+            "minified" : true
         },
         "optimization" : {
             "subPackages" : true
