--- a/manifest.json
+++ b/manifest.json
@@ -105,7 +105,9 @@
         "usingComponents" : true,
         "splashscreen" : {
             "alwaysShowBeforeRender" : true,
-            "waiting" : false
+            "waiting" : false,
+						"autoclose" : true,
+						"delay" : 0
         }
     },
     "quickapp" : {},
